# firstApp

./: .pre-commit-config.yaml  README.md  bricks.kv  main.py  pong.kv  pyproject.toml
levels/: level1.csv
src/: bricks.py  decorators.py  game.py  logging_config.py  objects.py  pong_ball.py  resources.py
src/levels/: level1.csv
tests/: test_game.py  test_objects.py
