[tool.poetry]
name = "willbrick"
version = "0.1.0"
description = ""
authors = ["William D'Onofrio"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Kivy = "^2.1.0"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
